add flv metadata

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,12 @@ include_directories(./include)
 aux_source_directory(. PROJECT_SOURCES)
 set(PROJECT_LIBS x264 rtmp asound faac pthread)
 
+include_directories(./util)
+aux_source_directory(./util UTIL_SOURCES)
+link_directories(${UTIL_LIB_DIR})
+set(PROJECT_LIBS ${PROJECT_LIBS} ${UTIL_LIBS})
+set(PROJECT_SOURCES ${PROJECT_SOURCES} ${UTIL_SOURCES})
+
 # find opencv
 find_package(OpenCV)
 if(OPENCV_FOUND)
@@ -25,8 +31,8 @@ target_link_libraries(publisher ${PROJECT_LIBS})
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -D_DEBUG -D_SAVE_H264 -Wall")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -D_DEBUG -D_SAVE_H264 -DH264_AVCC -Wall")
 # Annex_B format file and to AVCC format stream, record_annexb_01.h264
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -D_DEBUG -DUSE_H264_READER -DSUBNALU_TO_AVCC_FORMAT -DH264_AVCC -Wall")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -D_DEBUG -DUSE_H264_READER -DSUBNALU_TO_AVCC_FORMAT -DH264_AVCC -Wall")
 # Annex_B file stream, record_annexb_01.h264
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -D_DEBUG -DUSE_H264_READER -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -D_DEBUG -DUSE_H264_READER -Wall")
 # AVCC file stream, record_avcc.h264
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -D_DEBUG -DUSE_H264_READER -DH264_AVCC -Wall")
